k8s/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: endpoint-stats
  labels:
    name: endpoint-stats
