k8s/flask-api.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-api
  namespace: endpoint-stats
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-api
  template:
    metadata:
      labels:
        app: flask-api
    spec:
      containers:
        - name: flask-api
          image: shreeraj1746/endpoint-stats:latest
          ports:
            - containerPort: 9999
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 100Mi
          livenessProbe:
            httpGet:
              path: /health
              port: 9999
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: flask-api
  namespace: endpoint-stats
spec:
  selector:
    app: flask-api
  ports:
    - protocol: TCP
      port: 9999
      targetPort: 9999
